...
      _tampilkanSnackbar("Harap perbaiki kesalahan di form", Colors.orange);
      return;
    }

    if (!_setujuSyarat) {
      setState(
        () => _errorMessage = "Anda harus menyetujui syarat & ketentuan",
      );
      _tampilkanSnackbar(
        "Anda harus menyetujui syarat & ketentuan",
        Colors.red,
      );
      return;
...
      position: _animasiSlide,
      child: FadeTransition(
        opacity: _animasiFade,
        child: Column(
          children: [
            Text(
              'Buat Akun',
              style: TextStyle(
                fontSize: 32,
                fontWeight: FontWeight.bold,
                color: Colors.grey[800],
                letterSpacing: 0.5,
              ),
...
