...
                    color: Colors.white,
                  ),
                ),
                const SizedBox(height: 40),
                // Title
                Text(
                  'Verifikasi Email Anda',
                  style: TextStyle(
                    fontSize: 28,
                    fontWeight: FontWeight.bold,
                    color: Colors.grey[800],
                    letterSpacing: 0.5,
                  ),
...
