...
        'media_paths': finalMediaUrls,
        'status': 'Diajukan',
        'updated_at': FieldValue.serverTimestamp(),
        'is_read': true,
      });

      ScaffoldMessenger.of(context).showSnackBar(const SnackBar(content: Text('Laporan berhasil diperbarui')));
      Navigator.of(context).pop(true);
    } catch (e) {
      ScaffoldMessenger.of(context).showSnackBar(SnackBar(content: Text('Gagal memperbarui laporan: $e')));
    }
  }

...
      print('Gagal menghapus media dari Supabase: $e');
    }
  }

  @override
  Widget build(BuildContext context) {
    final severityOptions = ['Rendah', 'Sedang', 'Tinggi', 'Bahaya'];

    return Scaffold(
      appBar: AppBar(
        iconTheme: const IconThemeData(color: Colors.white),
        title: Text(
          'Update Laporan',
...

          const SizedBox(height: 15),
          _buildLabel('Deskripsi Kerusakan'),
          _buildTextField(controller: _deskripsiController, hint: 'Tuliskan penjelasan singkat kerusakan', icon: Icons.description),

          const SizedBox(height: 15),
          _buildLabel('Tingkat Keparahan'),
          Container(
            padding: const EdgeInsets.symmetric(horizontal: 12, vertical: 4),
            decoration: BoxDecoration(color: Colors.grey[100], borderRadius: BorderRadius.circular(12), border: Border.all(color: Colors.grey)),
            child: DropdownButtonHideUnderline(
              child: DropdownButton<String>(
                isExpanded: true,
...
                ),
              ],
            ]),
          ),

          const SizedBox(height: 40),
          SizedBox(height: 55, width: double.infinity, child: ElevatedButton(onPressed: _submitUpdate, style: ElevatedButton.styleFrom(backgroundColor: Colors.blue[800], shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(16)), elevation: 2), child: const Text('Simpan Perubahan', style: TextStyle(color: Colors.white, fontSize: 18, fontWeight: FontWeight.bold)))),
        ]),
      ),
    );
  }

  Widget _buildLabel(String text) {
...
