...
            SizedBox(
              width: double.infinity,
              height: 55,
              child: ElevatedButton(
                onPressed: () {
                  ScaffoldMessenger.of(context).showSnackBar(
                    const SnackBar(content: Text("Laporan berhasil dikirim (Simulasi)")),
                  );
                  // Reset form dummy
                  setState(() {
                    _dummyMedia.clear();
                    _jenisKerusakanController.clear();
                    _lokasiDisplayController.clear();
...
